CSP Automation API initial commit
